# buffet

./: buffet.opam
benchmark/: benchmark.ml  dune
lib/: .#buffet6.ml  buffet.ml  buffet0.ml  buffet0.mli  buffet1.ml  buffet1.mli  buffet10.ml  buffet10.mli  buffet2.ml  buffet2.mli  buffet3.ml  buffet3.mli  buffet4.ml  buffet4.mli  buffet6.ml  buffet6.mli  buffet7.ml  buffet7.mli  buffet8.ml  buffet8.mli  buffet9.ml  buffet9.mli  dune  higher.ml  higher.mli  integer.ml  integer.mli  s.ml  s.mli
test/: dune  functor.ml
